# XtractForge-archive

./: .gitignore  .npmrc  ADDONS.md  AGENTS.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  SECURITY.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vite.config.js  vitest.config.js
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
electron/: main.js  plugin-manager.js  preload.js  theme-manager.js
electron/plugins/: annie.js  curl.js  ffmpeg.js  gallery-dl.js  lux.js  ollama.js  spotdl.js  ytdlp.js
electron/themes/: alexandria.js  catppuccin-latte.js  catppuccin-mocha.js  cyber-glass.js  github-light.js  gruvbox-dark.js  matrix.js  monokai.js  tokyo-night.js  xtractforge-default.js
icons/: AppIcon.icns
src/: App.jsx  SettingsApp.jsx  index.css  index.html  main.jsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  downloader.rs  main.rs
src/components/: ErrorBoundary.jsx  Sidebar.jsx
src/components/tabs/: DownloadTab.jsx  PluginsTab.jsx  QueueTab.jsx  SettingsTab.jsx  ThemesTab.jsx
src/lib/: format.js  plugin-loader.ts  plugins.js  queue.js  tauri-bridge.ts  theme.js
src/locales/: en.js  es.js
src/plugins/: curl.ts  ffmpeg.ts  gallery-dl.ts  lux.ts  spotdl.ts  ytdlp.ts
src/themes/: os-macos-dark.ts  os-macos-light.ts  os-ubuntu-dark.ts  os-ubuntu-light.ts  os-windows-10-dark.ts  os-windows-10-light.ts  os-windows-11-dark.ts  os-windows-11-light.ts
tests/: plugin-manager.test.js  plugins.test.js  theme-manager.test.js
